<resources>
    <string name="app_name">AndroidELearning</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="hello_and_welcome_to_our_app">Hello and Welcome To Our App</string>
    <string name="role">Role</string>
    <string name="age">Age</string>
    <string name="teacher">Teacher</string>
    <string name="Creator">Creator</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="contact_info">Contact Info</string>
    <string name="student">Student</string>
    <string name="title_activity_teacher_temp_main">TeacherTempMain</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="create_a_quiz">Create a Quiz</string>
    <string name="create_an_activity">Create an Activity</string>
    <string name="create_a_lesson">Create a Lesson</string>
    <string name="check_profile_of_student">Check Profile Of Student</string>
    <string name="hello">hello</string>
    <string name="lessons">Lessons</string>
    <string name="activities">Activities</string>
    <string name="quizzes">Quizzes</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="invalid_em">Invalid Email / Password</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>

    <string-array name="studentmenu">
        <!--<item>Information</item>-->
        <item>My Profile</item>
        <item>Logout</item>
    </string-array>

    <string-array name="menu">
        <!--<item>Information</item>-->
        <item>Create Module</item>
        <item>Check Student Activity</item>
        <item>Logout</item>
    </string-array>
</resources>
