<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreationActivity">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/lesson_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:text="@string/create_a_lesson"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/activity_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:text="@string/create_an_activity"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/quiz_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:text="@string/create_a_quiz"
            android:textAllCaps="false" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>